--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "start:ios": "react-native run-ios --simulator='iPhone 16 Pro'"
   },
   "dependencies": {
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "^4.12.0"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,6 +26,7 @@
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
